--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     
 }
 
+.active-header {
+    background-color: greenyellow;
+}
+
 html {
     max-width: 100%;
     overflow-x: hidden
@@ -93,7 +97,6 @@ a:visited {
 #team-info {
     width: 100%;
     height:46vh;
-    
 }
 
 .team-info-container {
@@ -103,10 +106,7 @@ a:visited {
 
     width: 100%;
     height: 100%;
-
-
 }
-
 
 .team-info-logo {
 
@@ -155,6 +155,28 @@ a:visited {
     background-color: black;
 }
 
-.active-header {
-    background-color: greenyellow;
+/* Newsfeed */
+
+#newsfeed {
+    width: 100%;
+    height:92vh;
+    background-color:pink;
+
+    
 }
+
+.newsfeed-container {
+    height: 100%;
+    display: flex;
+}
+
+.newsfeed-section {
+    flex: 1 1 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
