--- a/styles.css
+++ b/styles.css
@@ -178,5 +178,105 @@ a:visited {
     align-items: center;
 }
 
+/* Subunit */
+
+#members-group {
+    background-color: grey;
+}
+
+.members-group-container {
+    width: 100%;
+    height: 23vh;
+    display: flex;
+}
+
+.members-group-section {
+    flex: 1 1 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Members */
+
+#members {
+    background-color: palevioletred;
+    width: 100%;
+    height:48vh
+}
+
+#members-container {
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.members-img {
+    height: 70%;
+    
+    border: 1px solid black;
+}
+
+.members-img img {
+    width: 100%;
+    height: 100%;
+}
+
+.members-bio-container {
+    height: 70%;
+    width: 30%;
+    border: 1px solid blue;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#members-bio-name {
+    margin:0;
+    width: 100%;
+
+    background-color: blanchedalmond;
+    flex: 10%
+}
+
+#members-bio-age {
+    margin:0;
+    width: 100%;
+
+    background-color: burlywood;
+    flex: 10%
+}
+
+#members-bio-about {
+    margin:0;
+    width: 100%;
+
+    background-color: red;
+    flex: 70%
+}
+.members-bio-button {
+    width: 100%;
+
+    background-color: aqua;
+    flex: 10%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.members-bio-button button {
+    
+    background-color: powderblue;
+    border:0;
+    border-radius: 20px;
+    padding: 1vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+
+}
 
 
