--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ a:visited {
 /* Subunit */
 
 #members-group {
-    background-color: grey;
+    width: 100%;
 }
 
 .members-group-container {
@@ -194,7 +194,34 @@ a:visited {
     flex: 1 1 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+
+.members-group-section a {
+    display: flex;
+    justify-content: center;
+}
+
+.members-group-section * {
+    width: 90%;
+    height: 100%;
+}
+
+/* .members-group-section.active {
+    background-color: grey;
+} */
+
+#subunit-background {
+    background-color: rgb(155, 199, 238);
+    height: 23vh;
+    width: 34%;
+
+    position: absolute;
+    top:100px;
+    left: 0%;
+
+    z-index: -1;
+
+    transition: all linear 0.2s;
 }
 
 /* Members */
