--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ a:visited {
     justify-content:flex-end;
     align-items: center;
     
-    background-color: grey;
+    background-color: black;
 
     transition: background-color .3s linear;
 }
@@ -52,7 +52,7 @@ a:visited {
 
 
 #header.active-header {
-    background-color: grey;
+    background-color: black;
 }
 
 .navitem {
@@ -208,6 +208,7 @@ a:visited {
 .members-group-section a {
     display: flex;
     justify-content: center;
+    cursor: default;
 }
 
 .members-group-section a:active {
@@ -375,6 +376,53 @@ a:visited {
 }
 
 /* POSTS - Page Title */
+
+.page-body {
+    width: 100%;
+}
+
+.page-body-flexbox {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.page-body-section {
+    display: flex;
+    width: 60%;
+}
+
+.page-body-main {
+    flex: 3;
+    flex-direction: column;
+}
+
+.page-body-side {
+    margin-left: 30px;
+    flex: 1;
+    flex-direction: column;
+}
+
+.filter-button {
+    width: 100%;
+    height: 5vh;
+    background-color: rgb(155, 199, 238);
+    
+    border-radius: 20px;
+    padding: 1vh;
+    margin: 0 0 10px 0;
+}
+
+.post {
+    width: 100%;
+    height: 100%;
+    background-color: paleturquoise;
+    margin: 0 0 1em 0;
+
+    
+}
+
+
 
 /* not done yet */
 
