--- a/styles.css
+++ b/styles.css
@@ -377,27 +377,29 @@ a:visited {
 
 /* POSTS - Page Title */
 
-.page-body {
+.concerts-body {
     width: 100%;
 }
 
-.page-body-flexbox {
+.concerts-body-flexbox {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.page-body-section {
+.concerts-body-section {
     display: flex;
     width: 60%;
+
+    font-size: 150%
 }
 
-.page-body-main {
+.concerts-body-title {
     flex: 3;
     flex-direction: column;
 }
 
-.page-body-side {
+.concerts-body-side {
     margin-left: 30px;
     flex: 1;
     flex-direction: column;
@@ -415,13 +417,54 @@ a:visited {
 
 .post {
     width: 100%;
-    height: 100%;
     background-color: paleturquoise;
     margin: 0 0 1em 0;
 
+    display: flex;
+    flex-direction: column;
+
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.post-title {
+    margin: 0 0 0 0;
+}
+
+.post-tags {
+    display: flex;
+}
+
+.tag {
+    background-color: black;
+    border-radius: 5px 20px 5px 20px;
+    margin: 0 20px 0 10px;
+    
+    font-size: 70%;
+    padding: .4em;
+
+    color: white;
+    font-weight: bold;
+}
+
+.post-body {
+    display: flex;
+    flex-direction: column;
+
+    font-size: 70%;
+
+}
+
+.post-body-image {
+    width: 100%;
+    height: 100%;
     
 }
 
+.post-body-image img {
+    width: 100%;
+    height: 100%;
+}
 
 
 /* not done yet */
