--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ a:visited {
     font-size: 150%
 }
 
-.concerts-body-title {
+.concerts-body-main {
     flex: 3;
     flex-direction: column;
 }
