--- a/styles.css
+++ b/styles.css
@@ -437,11 +437,11 @@ a:visited {
 
 .tag {
     background-color: black;
-    border-radius: 5px 20px 5px 20px;
-    margin: 0 20px 0 10px;
+    border-radius: 10px 20px 10px 20px;
+    margin: 0 20px 0 0px;
     
     font-size: 70%;
-    padding: .4em;
+    padding: .4em 1em .4em 1em;
 
     color: white;
     font-weight: bold;
@@ -465,6 +465,31 @@ a:visited {
     width: 100%;
     height: 100%;
 }
+
+.support-buttons {
+    margin: 0;
+}
+
+.support-buttons a{
+    background-color: white;
+    padding: 10px;
+    border-radius: 20px;
+    
+    margin: 0 10px 0 10px;
+
+    text-decoration: none;
+    color: black;
+}
+
+.support-buttons a:hover {
+    background-color: bisque;
+}
+
+.support-buttons a:visited {
+    text-decoration: none;
+    color: black;
+}
+
 
 
 /* not done yet */
