--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
     font-weight: 500;
 
     max-width: 100%;
-    overflow-x: hidden
+    overflow: hidden
 }
 
 a {
@@ -379,12 +379,16 @@ a:visited {
 
 .concerts-body {
     width: 100%;
+    overflow-y: hidden;
+
 }
 
 .concerts-body-flexbox {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-y: hidden;
+
 }
 
 .concerts-body-section {
@@ -458,7 +462,7 @@ a:visited {
 .post-body-image {
     width: 100%;
     height: 100%;
-    
+    margin: 20px 0 0 0
 }
 
 .post-body-image img {
