--- a/styles.css
+++ b/styles.css
@@ -517,7 +517,7 @@ a:visited {
 
 .support-buttons a{
     background-color: white;
-    padding: 10px;
+    padding: .3em;
     border-radius: 20px;
     
     margin: 0 10px 0 10px;
