--- a/styles.css
+++ b/styles.css
@@ -568,10 +568,10 @@ footer {
         display: none;
     }
 }
-
+/* 
 
 @media only screen and (max-width:420px) {
     .sbinline {
         display: block;
     }
-}
+} */
