--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,7 @@ a:visited {
 
 .concerts-body {
     width: 100%;
-    font-size: 2vw;
+    /* font-size: 2vw; */
 }
 
 .concerts-body-flexbox {
@@ -422,7 +422,7 @@ a:visited {
 
 .concerts-body-section {
     display: flex;
-    width: 80%;
+    width: 60%;
 
     font-size: 150%
 }
@@ -566,6 +566,9 @@ footer {
 
     .concerts-body-side {
         display: none;
+    }
+    .concerts-body {
+        font-size: 2vw;
     }
 }
 /* 
