--- a/styles.css
+++ b/styles.css
@@ -423,8 +423,8 @@ a:visited {
 .concerts-body-section {
     display: flex;
     width: 60%;
+    font-size: 150%;
 
-    font-size: 150%
 }
 
 .concerts-body-main {
@@ -467,6 +467,7 @@ a:visited {
 
     padding: 20px;
     border-radius: 20px;
+
 }
 
 .post.hidden {
@@ -474,7 +475,7 @@ a:visited {
 }
 
 .post-title {
-    margin: 0 0 0 0;
+    margin: 0;
 }
 
 .post-tags {
@@ -541,6 +542,47 @@ a:visited {
     color: black;
 }
 
+.gallery {
+    display: flex;
+    flex-direction: column;
+}
+
+.gallery-header {
+    border-bottom: 1px black solid;
+    margin:0;
+    justify-content: space-between;
+}
+
+.gallery-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px 0 0 0
+}
+
+.gallery-item-name {
+    margin: auto 0 0 0;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center {
+    text-align: center;
+    width: 100%;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
 
 
 /* not done yet */
@@ -568,7 +610,12 @@ footer {
         display: none;
     }
     .concerts-body {
-        font-size: 2vw;
+        font-size: calc(1vw + 12px);
+    }
+    .concerts-body-section {
+        width: 90%;
+        font-size: 100%;
+
     }
 }
 /* 
