--- a/styles.css
+++ b/styles.css
@@ -564,6 +564,11 @@ a:visited {
     margin: auto 0 0 0;
 }
 
+.gallery iframe {
+    width: 560;
+    height: 315;
+}
+
 .flex {
     display: flex;
 }
