--- a/styles.css
+++ b/styles.css
@@ -440,15 +440,13 @@ a:visited {
 }
 
 .filter-button {
-    width: 100%;
     height: 5vh;
     background-color: rgb(255, 255, 255);;
     
     border-radius: 20px;
     padding: 1vh;
-    margin:0 0 10px 0;
 
-    text-align: center;
+    margin:0 0 10px 0;
 
     transition: background-color 0.1s linear;
 }
@@ -458,28 +456,11 @@ a:visited {
 }
 
 .post {
-    width: 100%;
     background-color: paleturquoise;
     margin: 0 0 1em 0;
 
-    display: flex;
-    flex-direction: column;
-
     padding: 20px;
     border-radius: 20px;
-
-}
-
-.post.hidden {
-    display: none;
-}
-
-.post-title {
-    margin: 0;
-}
-
-.post-tags {
-    display: flex;
 }
 
 .tag {
@@ -495,40 +476,19 @@ a:visited {
 }
 
 .post-body {
-    display: flex;
-    flex-direction: column;
-
     font-size: 70%;
-
 }
 
 .post-body-image {
-    width: 100%;
-    height: 100%;
     margin: 20px 0 0 0
 }
 
-.post-body-image img {
-    width: 100%;
-    height: 100%;
-}
-
-.support-buttons {
-    margin: 0;
-}
-
-.sbinline {
-    margin: 1em 0 1em 0;
-    display: inline;
-}
-
-.support-buttons a{
+.support-buttons a {
     background-color: white;
     padding: .3em;
     border-radius: 20px;
     margin: 0 10px 0 10px;
     
-
     text-decoration: none;
     color: black;
 }
@@ -542,31 +502,14 @@ a:visited {
     color: black;
 }
 
-.gallery {
-    display: flex;
-    flex-direction: column;
-}
-
 .gallery-header {
     border-bottom: 1px black solid;
-    margin:0;
+    
     justify-content: space-between;
 }
 
 .gallery-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     margin: 20px 0 0 0
-}
-
-.gallery-item-name {
-    margin: auto 0 0 0;
-}
-
-.gallery iframe {
-    width: 560;
-    height: 315;
 }
 
 .flex {
@@ -579,13 +522,12 @@ a:visited {
     align-items: center;
 }
 
-.center {
+.text-center {
     text-align: center;
     width: 100%;
 }
 
-.flex-column {
-    display: flex;
+.column {
     flex-direction: column;
 }
 
@@ -593,7 +535,22 @@ a:visited {
     display: none;
 }
 
+.fw {
+    width: 100%;
+}
 
+.fill {
+    width: 100%;
+    height: 100%;
+}
+
+.nomargin {
+    margin:0 ;
+}
+
+.nopadding {
+    padding: 0;
+}
 /* not done yet */
 
 footer {
@@ -602,7 +559,7 @@ footer {
     background-color: lightgray;
 }
 
-@media only screen and (max-width:920px) {
+@media only screen and (max-width:1000px) {
     .member-inner-container {
         width: 80%;
     }
@@ -624,13 +581,17 @@ footer {
     .concerts-body-section {
         width: 90%;
         font-size: 100%;
-
     }
 }
-/* 
 
-@media only screen and (max-width:420px) {
-    .sbinline {
-        display: block;
+
+@media only screen and (max-width:680px) {
+    /* .gallery {
+        display: none;
+    } */
+    .gallery iframe {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 16/9;
     }
-} */
+}
