--- a/styles.css
+++ b/styles.css
@@ -82,11 +82,20 @@ a:visited {
     background-attachment: fixed;
 }
 
-#banner.downsized {
+#banner.concerts {
     background-image: url("Media/Aqours_Logo.webp");
     background-attachment: scroll;
     background-size: contain;
     height: 20vh;
+}
+
+#banner.team {
+    background-image: url("Media/Amogus.jpg");
+    height: 20vh;
+    background-attachment: scroll;
+    background-size: contain;
+    background-repeat: repeat;
+
 }
 
 .banner-text {
@@ -123,6 +132,7 @@ a:visited {
     flex: 1;
     height: 100%;
 }
+
 .team-info-left > img {
     width: 100%;
     height: 100%;
@@ -242,8 +252,8 @@ a:visited {
 }
 
 .member-inner-container {
-    width:80%;
-    height:70%;
+    width:60%;
+    height:80%;
     background-color: azure;
     border-radius: 15px;
 }
@@ -341,7 +351,7 @@ a:visited {
 
 #scroll-buttons-container {
     height: 75vh;
-    width: 90%;
+    width: 70%;
     justify-content: space-between;
     align-items: center;
     
@@ -463,6 +473,36 @@ a:visited {
     margin: 20px 0 0 0
 }
 
+/* AAAAAAAAAAAAAAAAAAA */
+
+#team-container {
+    width: 100%;
+    height: 90vh;
+    background-color: paleturquoise;
+}
+
+#team-member-inner {
+    width: 70%;
+    height: 60%;
+}
+
+.team-member-left {
+    flex: 1;
+    height: 100%;
+}
+
+.team-member-left > img {
+    height: 100%;
+    width: 100%;
+}
+
+.team-member-right {
+    flex: 2;
+    height: 100%;
+}
+
+
+
 .flex {
     display: flex;
 }
@@ -498,6 +538,8 @@ a:visited {
 .nopadding {
     padding: 0;
 }
+
+
 /* not done yet */
 
 footer {
