--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ a:visited {
 
 
 #header.active-header {
-    background-color: black;
+    background-color: rgb(153, 153, 153);
 }
 
 .navitem {
@@ -117,13 +117,16 @@ a:visited {
 }
 /* INDEX.HTML - Main Body */
 
-#team-advert {
-    height:max-content;
-    width: 100%;
-    margin: 60px 0 60px 0;
+#team-advert-section,
+#concert-advert-section {
+    padding: 30px 0 0 0;
+    /* background-image: url("Media/uranohoshi_on.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; */
 }
 
-.team-advert {
+.advert {
     width: 70%;
 
     padding: 2rem;
@@ -131,13 +134,8 @@ a:visited {
     border-radius: 30px;
 }
 
-.team-advert-header {
+.advert-header {
     margin: 0 auto
-}
-
-.team-advert-header *{
-    max-height: 100%;
-    padding: 3px;
 }
 
 
@@ -168,16 +166,10 @@ a:visited {
     background-color: turquoise;
 }
 
-
-
-
-/* INDEX.HTML - Members Advert */
-
-#members-advert {
-    width: 100%;
-    height:92vh;
+#concert-advert-text {
+    margin: 0 0 0 10px;
+    
 }
-
 
 /* MEMBERS.HTML Subunit picker  */
 
@@ -249,12 +241,6 @@ a:visited {
 
     background-color: beige;
     font-size: 16px;
-}
-
-.member-container {
-    width: 100%;
-    height: 100%;
-
 }
 
 .member-inner-container {
@@ -370,7 +356,7 @@ a:visited {
 }
 
 /* POSTS - Page Title */
-
+/* 
 .concerts-body {
     width: 100%;
 }
@@ -379,8 +365,7 @@ a:visited {
     display: flex;
     align-items: center;
     flex-direction: column;
-
-}
+} */
 
 .concerts-body-section {
     display: flex;
@@ -391,7 +376,6 @@ a:visited {
 
 .concerts-body-main {
     flex: 3;
-    flex-direction: column;
     width: 100%;
 }
 
@@ -445,10 +429,6 @@ a:visited {
     margin: 20px 0 0 0;
 }
 
-.post-body-image img {
-    width: 100%;
-    height: 100%;
-}
 
 .support-buttons a {
     background-color: white;
