--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
-
+    font-size: 1.2vmax;
     max-width: 100%;
     overflow: hidden;
 
@@ -119,19 +119,18 @@ a:visited {
 
 #team-advert-section,
 #concert-advert-section {
-    padding: 30px 0 0 0;
-    /* background-image: url("Media/uranohoshi_on.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; */
+    margin: 5rem 0 0 0
 }
 
 .advert {
-    width: 70%;
-
-    padding: 2rem;
+    
+    padding: 1rem;
     background-color: paleturquoise;
-    border-radius: 30px;
+    /* border-radius: 30px; */
+}
+
+.advert > * {
+    width: 80%;
 }
 
 .advert-header {
@@ -146,29 +145,36 @@ a:visited {
     
 }
 
-#meet-team {
+.advert-button {
     position: relative;
     top: 0;
     width: 60%;
-    padding: 1rem;
+    padding: .4rem;
     color: #000000;
     background-color: white;
     border-radius: 30px;
 
     margin: auto auto 0 auto;
 
-    transition: background-color .3s linear;
-    transition: top .3s ease;
+    transition: top .2s linear;
 }
 
-#meet-team:hover {
+.advert-button:hover {
     top:-4px;
     background-color: turquoise;
 }
 
-#concert-advert-text {
-    margin: 0 0 0 10px;
-    
+#meet-team {
+    margin: auto auto 0 auto;
+    width: 60%
+}
+
+#read-more {
+    margin: 0 auto 0 auto
+}
+
+.concert-advert-right {
+    margin-left: 1rem;
 }
 
 /* MEMBERS.HTML Subunit picker  */
@@ -524,10 +530,18 @@ a:visited {
 /* not done yet */
 
 footer {
-    width: 100%;
-    height: 200px;
+    height: 10vh;
     background-color: lightgray;
+    justify-content: space-around;
+    align-items: center;
 }
+
+/* 
+@media only screen and (min-width:1220px) {
+    .body{
+        font-size: 1vmax
+    }
+} */
 
 @media only screen and (max-width:1000px) {
     .member-inner-container {
