--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,11 @@ a:visited {
 }
 
 #banner.team {
-    background-image: url("Media/Amogus.jpg");
+    background-image: url("Media/uranohoshi_off.png");
     height: 20vh;
     background-attachment: scroll;
-    background-size: contain;
-    background-repeat: repeat;
-
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .banner-text {
@@ -185,7 +184,7 @@ a:visited {
 
 .members-group-container {
     width: 100%;
-    height: 15vh;
+    height: 15vmin;
 }
 
 .members-group-section {
@@ -205,7 +204,7 @@ a:visited {
 
 #subunit-background {
     background-color: rgb(155, 199, 238);
-    height: 15vh;
+    height: 15vmin;
     width: 34%;
 
     position: absolute;
@@ -234,6 +233,7 @@ a:visited {
     white-space: nowrap;
     font-size: 0;
     /* font-size:0 to get rid of spaces between inline-blocks, important.(setting bg-color here won't work i've tried) */
+
   }
 
 .slide{
@@ -324,6 +324,7 @@ a:visited {
     display: flex;
     justify-content: center;
     background-color: beige;
+    padding: 0 0 15px 0
 }
 
 #buttons button {
@@ -467,14 +468,10 @@ a:visited {
 
 /* AAAAAAAAAAAAAAAAAAA */
 
-#team-container {
-    height: 90vh;
-    background-color: paleturquoise;
-}
 
-#team-member-inner {
-    width: 70%;
-    height: 60%;
+.team-member-inner {
+    background-color: paleturquoise;
+    margin: 2%
 }
 
 .team-member-left {
