--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,9 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
-    font-size: 1.2vmax;
     max-width: 100%;
     overflow: hidden;
-
+    font-size: 1.2vmax;
     font-family: Roboto, sans-serif;
 }
 
@@ -118,14 +117,13 @@ a:visited {
 
 #team-advert-section,
 #concert-advert-section {
-    margin: 5rem 0 0 0
+    margin: 2rem 0 2rem 0
 }
 
 .advert {
-    
     padding: 1rem;
     background-color: paleturquoise;
-    /* border-radius: 30px; */
+    width: 60%;
 }
 
 .advert > * {
@@ -470,12 +468,13 @@ a:visited {
 
 
 .team-member-inner {
-    background-color: paleturquoise;
-    margin: 2%
+    margin: 2%;
+    padding: .5rem;
 }
 
 .team-member-left {
     flex: 1;
+    justify-content: center;
 }
 
 .team-member-right {
@@ -483,6 +482,26 @@ a:visited {
     height: 100%;
 }
 
+.team-member-right h1 {
+    padding: .3em .5em .3em .5em;
+    border-radius: 10px;
+    background-color: antiquewhite;
+    margin: 0
+}
+
+.team-member-image {
+    background-color: antiquewhite;
+    border-radius: 50%;
+    position: relative;
+    top: 0;
+    transition: top 0.7s ease;
+    max-width: 33vh;
+    max-height: 33vh;
+}
+
+.team-member-image:hover {
+    top: -10px
+}
 
 .flex {
     display: flex;
