--- a/styles.css
+++ b/styles.css
@@ -390,13 +390,12 @@ a:visited {
 }
 
 .filter-button {
-    height: 5vh;
     background-color: rgb(255, 255, 255);;
     
     border-radius: 20px;
-    padding: 1vh;
+    padding: 1rem;
 
-    margin:0 0 10px 0;
+    margin: 0 0 1rem 0;
 
     transition: background-color 0.1s linear;
 }
