--- a/styles.css
+++ b/styles.css
@@ -383,19 +383,32 @@ a:visited {
     width: 100%;
 }
 
-.concerts-body-side {
+.concerts-body-middle {
     flex: 1;
+    display: none;
+}
+
+.concerts-body-middle img {
+    max-width:2em;
+}
+
+.concerts-body-side {
     margin-left: 30px;
     flex-direction: column;
+}
+
+#mobile-dropdown-container {
+    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.2);
+    margin-bottom: 1rem;
 }
 
 .filter-button {
     background-color: rgb(255, 255, 255);;
     
     border-radius: 20px;
-    padding: 1rem;
+    padding: .5rem 1rem .5rem 1rem;
 
-    margin: 0 0 1rem 0;
+    margin: .3rem 0 .3rem 0;
 
     transition: background-color 0.1s linear;
 }
@@ -561,6 +574,15 @@ footer {
     .member-scroll-button-container {
         display: flex;
     }
+
+    
+    .concerts-body-middle {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
 
     .concerts-body-side {
         display: none;
