--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ a:visited {
     transition: background-color .3s linear;
 }
 
-#header.canScroll {
+#header.canscroll {
     position: fixed;
     top: 0;
     background-color: transparent;
@@ -57,13 +57,15 @@ a:visited {
 .navitem {
     font-size: 120%;
     color: plum;
-
-    padding-right: .5em;
+    padding-right: 1em;
 }
 
-.bigbutton {
-    max-height: 8vh;
+.logo {
     padding-left: 10%;
+}
+
+.logo img {
+    max-height: 7vh;
 }
 
 /* INDEX.HTML - Hero Image*/
