--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ a:visited {
 
 #members {
     width: 100%;
-    height: 74vh;
+    height: 70vh;
 }
 
 #slides{  
@@ -329,7 +329,7 @@ a:visited {
     border-radius: 20px;
     
     padding:1.5vh;
-    margin: 0 4vh 0 4vh;
+    margin: 0 2rem 0 2rem;
 
     z-index: 100;   
 }
