--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,7 @@ a:visited {
     display: flex;
     justify-content: center;
     background-color: beige;
-    padding: 0 0 15px 0
+    padding: 0 0 4vh 0
 }
 
 #buttons button {
