--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ a:visited {
 
 .members-group-container {
     width: 100%;
-    height: 15vmin;
+    height: 20vmin;
 }
 
 .members-group-section {
@@ -199,7 +199,7 @@ a:visited {
 
 #subunit-background {
     background-color: rgb(155, 199, 238);
-    height: 15vmin;
+    height: 20vmin;
     width: 34%;
 
     position: absolute;
@@ -214,7 +214,7 @@ a:visited {
 
 #members {
     width: 100%;
-    height: 70vh;
+    height: 65vh;
 }
 
 #slides{  
@@ -355,6 +355,7 @@ a:visited {
     width: 3vw;
     height: 3vw;
     z-index: 100;
+    font-size: 4rem;
 }
 
 /* POSTS - Page Title */
