--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body{
     max-width: 100%;
     overflow: hidden;
     font-family: Roboto, sans-serif;
+    font-size: 2vmax
 }
 
 a {
@@ -37,8 +38,7 @@ a:visited {
     justify-content:flex-end;
     align-items: center;
     
-    background-color: black;
-
+    background-color: gainsboro;
     transition: background-color .3s linear;
 }
 
@@ -51,7 +51,7 @@ a:visited {
 
 
 #header.active-header {
-    background-color: rgb(153, 153, 153);
+    background-color: gainsboro;
 }
 
 .navitem {
@@ -88,8 +88,8 @@ a:visited {
 }
 
 #banner.team {
-    background-image: url("Media/uranohoshi_off.png");
-    height: 20vh;
+    background-image: url("");
+    height: 3vh;
     background-attachment: scroll;
     background-size: cover;
     background-repeat: no-repeat;
@@ -175,6 +175,7 @@ a:visited {
 
 #subunits {
     width: 100%;
+    background-color: gainsboro;
 }
 
 .members-group-container {
@@ -205,9 +206,13 @@ a:visited {
     position: absolute;
     left: 0%;
 
-    z-index: -1;
+    z-index: 1;
 
     transition: all linear 0.3s;
+}
+
+.subunit-image {
+    z-index: 2;
 }
 
 /* MEMBERS.HTML - Members carousell */
@@ -240,14 +245,13 @@ a:visited {
 
     margin: 0;
 
-    background-color: beige;
     font-size: 16px;
 }
 
 .member-inner-container {
     width: min(60%, 1000px);
     height:80%;
-    background-color: azure;
+    background-color: gainsboro;
     border-radius: 15px;
 }
 
@@ -290,8 +294,7 @@ a:visited {
     flex: 1;
     padding: 0 9px 3px 9px;
     display: flex;
-    justify-content: center;
-    
+    justify-content: center;    
 }
 
 .member-links a img {
@@ -318,7 +321,6 @@ a:visited {
 #buttons {
     display: flex;
     justify-content: center;
-    background-color: beige;
     padding: 0 0 4vh 0
 }
 
@@ -479,6 +481,8 @@ a:visited {
 .team-member-inner {
     margin: 2%;
     padding: .5rem;
+    background-color: paleturquoise;
+    width: 90%;
 }
 
 .team-member-left {
@@ -494,12 +498,11 @@ a:visited {
 .team-member-right h1 {
     padding: .3em .5em .3em .5em;
     border-radius: 10px;
-    background-color: antiquewhite;
     margin: 0
 }
 
 .team-member-image {
-    background-color: antiquewhite;
+    background-color: white;
     border-radius: 50%;
     position: relative;
     top: 0;
@@ -509,7 +512,7 @@ a:visited {
 }
 
 .team-member-image:hover {
-    top: -10px
+    top: -3px
 }
 
 .flex {
@@ -556,7 +559,7 @@ a:visited {
 
 footer {
     padding: 1em;
-    background-color: lightgray;
+    background-color: gainsboro;
 }
 
 
