--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ a:visited {
 
 .members-group-container {
     width: 100%;
-    height: 20vmin;
+    height: 12vh;
 }
 
 .members-group-section {
@@ -204,7 +204,7 @@ a:visited {
 
 #subunit-background {
     background-color: rgb(155, 199, 238);
-    height: 20vmin;
+    height: 12vh;
     width: 34%;
 
     position: absolute;
@@ -232,7 +232,7 @@ a:visited {
     overflow: hidden;
 
     width: 100%;
-    height: 100%;
+    height: 70vh;
 
     white-space: nowrap;
     font-size: 0;
@@ -254,7 +254,7 @@ a:visited {
 
 .member-inner-container {
     width: min(60%, 1000px);
-    height:80%;
+    height:90%;
     background-color: gainsboro;
     border-radius: 15px;
 }
@@ -325,7 +325,8 @@ a:visited {
 #buttons {
     display: flex;
     justify-content: center;
-    padding: 0 0 4vh 0
+    padding: 0 0 10vh 0;
+    height: 10vh;
 }
 
 #buttons button {
