--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@ a:visited {
 .members-group-container {
     width: 100%;
     height: 12vh;
+    
 }
 
 .members-group-section {
@@ -291,6 +292,7 @@ a:visited {
 .member-biography {
     padding:10px;
     flex:80%;
+    white-space: normal;
 }
 
 .member-links a {
@@ -335,7 +337,7 @@ a:visited {
     border:0;
     border-radius: 20px;
     
-    padding:1.5vh;
+    padding:2vh;
     margin: 0 2rem 0 2rem;
 
     z-index: 100;   
