--- a/styles.css
+++ b/styles.css
@@ -26,17 +26,15 @@ a:visited {
 }
 
 
-/* ALL - Navigation Bar*/
+/* Navigation Bar */
 #header {
 
     z-index: 100;
     width:100%;
     min-height:8vh;
-
     display: flex;
     justify-content:flex-end;
     align-items: center;
-    
     background-color: gainsboro;
     transition: background-color .3s linear;
 }
@@ -45,7 +43,6 @@ a:visited {
     position: fixed;
     top: 0;
     background-color: transparent;
-
 }
 
 
@@ -57,7 +54,6 @@ a:visited {
     font-size: 120%;
     font-weight: 800;
     padding-right: 1em;
-
 }
 
 .navitem:visited {
@@ -72,7 +68,7 @@ a:visited {
     max-height: 7vh;
 }
 
-/* INDEX.HTML - Hero Image*/
+/* Hero Images */
 
 #banner {
     height: calc(100vh - 20px);
@@ -105,15 +101,14 @@ a:visited {
     align-items: center;
     width:100%;
     height: 100%;
-    
     font-size: 250%;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     text-shadow: 2px 2px 4px #000000;
-
     backdrop-filter: blur(2px);
 
 }
+
 /* INDEX.HTML - Main Body */
 
 #team-advert-section,
@@ -157,9 +152,7 @@ a:visited {
     color: #000000;
     background-color: white;
     border-radius: 30px;
-
     margin: auto auto 0 auto;
-
     transition: top .2s linear;
 }
 
@@ -181,7 +174,7 @@ a:visited {
     margin-left: 1rem;
 }
 
-/* MEMBERS.HTML Subunit picker  */
+/* MEMBERS.HTML Subunit picker */
 
 #subunits {
     width: 100%;
@@ -213,12 +206,9 @@ a:visited {
     background-color: rgb(155, 199, 238);
     height: 12vh;
     width: 34%;
-
     position: absolute;
     left: 0%;
-
     z-index: 1;
-
     transition: all linear 0.3s;
 }
 
@@ -226,7 +216,7 @@ a:visited {
     z-index: 2;
 }
 
-/* MEMBERS.HTML - Members carousell */
+/* MEMBERS.HTML - Members carousell/slides */
 
 #members {
     width: 100%;
@@ -234,30 +224,21 @@ a:visited {
 }
 
 #slides{  
-    
     position: relative;
     overflow: hidden;
-
     width: 100%;
     height: 70vh;
-
     white-space: nowrap;
     font-size: 0;
     /* font-size:0 to get rid of spaces between inline-blocks, important.(setting bg-color here won't work i've tried) */
-
   }
-
-
 
 .slide{
     position: relative;
     display: inline-block;
-
     width: 100%;
     height: 100%;
-
     margin: 0;
-
     font-size: 16px;
 }
 
@@ -338,7 +319,6 @@ a:visited {
     width: 30px;
 }
 
-
 /* MEMBERS.HTML - Members carousell navigation buttons */
 
 #buttons {
@@ -350,13 +330,10 @@ a:visited {
 
 #buttons button {
     background-color: pink;
-
     border:0;
     border-radius: 20px;
-    
     padding:2vh;
     margin: 0 2rem 0 2rem;
-
     z-index: 100;   
 }
 
@@ -374,7 +351,6 @@ a:visited {
     width: 80%;
     justify-content: space-between;
     align-items: center;
-    
 }
 
 #prev-button , #next-button{
@@ -383,17 +359,7 @@ a:visited {
     z-index: 100;
 }
 
-/* POSTS - Page Title */
-/* 
-.concerts-body {
-    width: 100%;
-}
-
-.concerts-body-flexbox {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-} */
+/* CONCERTS.HTML - Page Layout */
 
 .concerts-body-section {
     display: flex;
@@ -428,12 +394,9 @@ a:visited {
 
 .filter-button {
     background-color: rgb(255, 255, 255);;
-    
     border-radius: 20px;
     padding: .5rem 1rem .5rem 1rem;
-
     margin: .3rem 0 .3rem 0;
-
     transition: background-color 0.1s linear;
 }
 
@@ -441,10 +404,11 @@ a:visited {
     background-color: rgb(155, 199, 238);
 }
 
+/* CONCERT.HTML - Individual Posts css  */
+
 .post {
     background-color: paleturquoise;
     margin: 0 0 1em 0;
-
     padding: 20px;
     border-radius: 20px;
 }
@@ -499,7 +463,7 @@ a:visited {
     margin: 20px 0 0 0
 }
 
-/* AAAAAAAAAAAAAAAAAAA */
+/* TEAM.HTML */
 
 
 .team-member-inner {
@@ -538,6 +502,8 @@ a:visited {
 .team-member-image:hover {
     top: -3px
 }
+
+/* GLOBAL  */
 
 .flex {
     display: flex;
@@ -578,37 +544,31 @@ a:visited {
     padding: 0;
 }
 
-
-/* not done yet */
+/* FOOTER  */
 
 footer {
     padding: 1em;
     background-color: gainsboro;
 }
 
+/* MEDIA QUERIES */
 
 @media only screen and (max-width:1000px) {
     .member-inner-container {
         width: 90%;
     }
-
     #scroll-buttons {
         display: none;
     }
-
     .member-scroll-button-container {
         display: flex;
     }
-
-    
     .concerts-body-middle {
         flex: 1;
         display: flex;
         align-items: center;
         justify-content: flex-end;
     }
-
-
     .concerts-body-side {
         display: none;
     }
@@ -621,20 +581,12 @@ footer {
     }
 }
 
-
 @media only screen and (max-width:680px) {
-    /* .gallery {
-        display: none;
-    } */
     .gallery iframe {
         width: 100%;
         height: 100%;
         aspect-ratio: 16/9;
     }
-
-    /* .member-inner-container {
-        flex-direction: column;
-    } */
     .member-image,
     .member-container-left{
         display: none;
@@ -646,14 +598,12 @@ footer {
         display: none;
     }
 
-    
 }
 
 @media only screen and (max-width:500px) {
     .logo-container {
         display: none;
     }
-
     #header {
         justify-content: space-around;
     }
